k8s/frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: quiz-game
  labels:
    app: frontend-service
    app.kubernetes.io/part-of: quiz-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: dennismuturi8/frontend-app:sha-49e2fd8c85cbcb6bec1b0dd28e1e422d94523110   # updated by CI
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests: { memory: "32Mi", cpu: "25m" }
            limits:   { memory: "64Mi", cpu: "100m" }
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
