k8s/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: quiz-game
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
